docs list item align fix

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -5,5 +5,4 @@
 
 ul li {
     margin: 10px 0;
-    text-align: center;
 }
